--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\Bright\Desktop\Web Development\images\Bright.jpg" height="200" width="200" alt="Onwumere Bright" /></td>
+      <td><img src="Bright.jpg" height="200" width="200" alt="Onwumere Bright" /></td>
       <td>
         <h1>Onwumere Okechukwu Bright</h1>
         <p><em>Senior Technical Consultant</em></p>
